# rough-bench

./: .gitignore  Makefile  README.md  STATUS.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
analysis/: chatgpt_overall.md  claude_extra.md  claude_ml_specific.md  claude_overall.md  gemini_overall.md  grok_steered.md  perplexity.md
benchmarks/agent_rubric_false_competence_spec/: gold_notes.md  rubric.yaml  task.yaml
benchmarks/agent_task_spec_not_handwave/: gold_notes.md  prompt.txt  rubric.yaml  task.yaml
benchmarks/analytics_ab_test_mix_shift_decision/: gold_notes.md  prompt.txt  rubric.yaml  task.yaml
benchmarks/analytics_guardrail_tradeoff_launch_decision/: gold_notes.md  rubric.yaml  task.yaml
benchmarks/applied_nlp_annotation_quality_gate/: gold_notes.md  prompt.txt  rubric.yaml  task.yaml
benchmarks/applied_nlp_bio_sequence_cleanup/: gold_notes.md  prompt.txt  rubric.yaml  task.yaml
benchmarks/applied_nlp_conflicting_summary/: gold_notes.md  (+3 more)
docker/: hf_datasets_runner.Dockerfile
docs/: awards.md  compare.md  efficiency.md  index.html  index.md  methodology.md  overall.md
roughbench/: __main__.py  cli.py  copilot_sdk_bridge.mjs  jobs.py  openai_compat.py  subjects.py
scripts/: build_docs_data.py  run_glm_coding_plan.sh  run_remaining_gemma_router.sh
subjects/: frontier_reference_subjects.yaml  frontier_sanity_seqeval.yaml  seed_subjects.yaml
tests/: test_cli.py  test_evaluator.py  test_integration.py  test_jobs.py  test_loader.py  test_models.py  test_openai_compat.py  test_regressions.py  test_scorecard.py  test_subjects.py
(+276 files in other folders)
